--- a/slicing.ipynb
+++ b/slicing.ipynb
@@ -137,6 +137,92 @@
     "s2=l[3][10:]\n",
     "print(s1+s2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jor\n",
+      "will\n",
+      "james\n",
+      "[40, 200, 300]\n",
+      "{'name': 'Meason Mount', 'age': 24, 'club': 'chelsen'}\n",
+      "Mount\n",
+      "['name', 'age', 'club']\n",
+      "['club', 'age']\n",
+      "chelsen\n",
+      "540\n",
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=['jordan','will blake',[300,200,40,'james willson'],{1:{'name':'Meason Mount', 'age':24,'club':'chelsen'}}]\n",
+    "print(l[0][0:3])\n",
+    "print(l[1][0:4])\n",
+    "print(l[2][3][0:5])\n",
+    "print(l[2][2::-1])\n",
+    "print(l[3][1])\n",
+    "print(l[3][1]['name'][7:])\n",
+    "print(list(l[3][1]))\n",
+    "print((list(l[3][1]))[2:0:-1])\n",
+    "print(l[3][1]['club'][:])\n",
+    "print(l[2][0]+l[2][1]+l[2][2])\n",
+    "print((str(l[3][1]['age'])[::-1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "onePlus\n",
+      "Apple\n",
+      "venug\n",
+      "opal\n",
+      "Amaresh\n",
+      "Anaconda\n",
+      "elppA\n",
+      "sulP\n",
+      "['Apple', 'onePlus']\n",
+      "Ana\n",
+      "resh\n",
+      "lap\n",
+      "pp\n",
+      "hse\n",
+      "onePlusApple\n",
+      "venugresh\n"
+     ]
+    }
+   ],
+   "source": [
+    "d={1:['onePlus','Apple'],2:{'name1':'venugopal','name2':'Amaresh'},'a':'Anaconda'}\n",
+    "print(d[1][0])\n",
+    "print(d[1][1])\n",
+    "print(d[2]['name1'][0:5])\n",
+    "print(d[2]['name1'][5:])\n",
+    "print(d[2]['name2'])\n",
+    "print(d['a'])\n",
+    "print(d[1][1][::-1])\n",
+    "print(d[1][0][6:2:-1])\n",
+    "print(d[1][::-1])\n",
+    "print(d['a'][0:3])\n",
+    "print(d[2]['name2'][3:])\n",
+    "print(d[2]['name1'][8:5:-1])\n",
+    "print(d[1][1][1:3])\n",
+    "print(d[2]['name2'][6:3:-1])\n",
+    "print(d[1][0]+d[1][1])\n",
+    "print(d[2]['name1'][0:5]+d[2]['name2'][3:])"
+   ]
   }
  ],
  "metadata": {
