--- a/while.ipynb
+++ b/while.ipynb
@@ -336,6 +336,325 @@
     "        j+=1\n",
     "    i-=1  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "i=1\n",
+    "s=0\n",
+    "while i<=5:\n",
+    "    s=s+i\n",
+    "    i+=1\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "144\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=11\n",
+    "s=0\n",
+    "while i<=25:\n",
+    "    s=s+i\n",
+    "    i+=2\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "144\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=11\n",
+    "s=0\n",
+    "while i<=25:\n",
+    "    if i%2==1:\n",
+    "       s=s+i\n",
+    "    i+=2\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "720\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=6\n",
+    "p=1\n",
+    "while i>=1:\n",
+    "    p=p*i\n",
+    "    i-=1\n",
+    "print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "162\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=1\n",
+    "p=1\n",
+    "while n<10:\n",
+    "    if n%3==0:\n",
+    "        p=p*n\n",
+    "    n+=1\n",
+    "print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1=int(input())\n",
+    "n2=int(input())\n",
+    "count=0\n",
+    "while n1<=n2:\n",
+    "    if n1%4==0:\n",
+    "        count+=1\n",
+    "    n1+=1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1=int(input())\n",
+    "n2=int(input())\n",
+    "count=0\n",
+    "while n1<=n2:\n",
+    "    if n1%3==0 and n1%5==0:\n",
+    "        count+=1\n",
+    "    n1+=1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1=int(input())\n",
+    "n2=int(input())\n",
+    "n3=int(input())\n",
+    "while n1<=n2:\n",
+    "    if n3%n1==0:\n",
+    "        print(n1)\n",
+    "    n1+=1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1=int(input())\n",
+    "n2=int(input())\n",
+    "count=0\n",
+    "while n1<=n2:\n",
+    "    if n2%n1==0:\n",
+    "        count+=1\n",
+    "    n1+=1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1=int(input())\n",
+    "n2=int(input())\n",
+    "sum=0\n",
+    "while n1<=n2:\n",
+    "    if n2%n1==0:\n",
+    "        sum=sum+n1\n",
+    "    n1+=1\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "odd\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "s=0\n",
+    "while i<=5:\n",
+    "    s=s+i\n",
+    "    i+=1\n",
+    "print(s)\n",
+    "if s%2==0:\n",
+    "    print('even')\n",
+    "else:\n",
+    "    print('odd')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n",
+      "divisible by 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=4\n",
+    "p=1\n",
+    "while i>=1:\n",
+    "    p=p*i\n",
+    "    i-=1\n",
+    "print(p)\n",
+    "if i%3==0:\n",
+    "    print('divisible by 3')\n",
+    "else:\n",
+    "    print('not divisible by 3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "not equal\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1=1\n",
+    "n2=10\n",
+    "count=0\n",
+    "while n1<=n2:\n",
+    "    if n2%n1==0:\n",
+    "        count+=1\n",
+    "    n1+=1\n",
+    "print(count)\n",
+    "if count==2:\n",
+    "    print('equal')\n",
+    "else:\n",
+    "    print('not equal')"
+   ]
   }
  ],
  "metadata": {
