--- a/while.ipynb
+++ b/while.ipynb
@@ -527,14 +527,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "4\n"
      ]
     }
    ],
@@ -551,14 +551,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n"
+      "6\n"
      ]
     }
    ],
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -655,6 +655,390 @@
     "else:\n",
     "    print('not equal')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "not a prime number\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1=1\n",
+    "n2=10\n",
+    "count=0\n",
+    "while n1<=n2:\n",
+    "    if n2%n1==0:\n",
+    "        count+=1\n",
+    "    n1+=1\n",
+    "print(count)\n",
+    "if count==2:\n",
+    "    print('prime number')\n",
+    "else:\n",
+    "    print('not a prime number')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "perfect number\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1=1\n",
+    "n2=int(input())\n",
+    "sum=0\n",
+    "while n1<n2:\n",
+    "    if n2%n1==0:\n",
+    "        sum=sum+n1\n",
+    "    n1+=1\n",
+    "if(sum==n2):\n",
+    "    print('perfect number')\n",
+    "else:\n",
+    "    print('not a perfect number')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "even\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1=1\n",
+    "n2=int(input())\n",
+    "count=0\n",
+    "while n1<=n2:\n",
+    "    if n2%n1==0:\n",
+    "        count+=1\n",
+    "    n1+=1\n",
+    "print(count)\n",
+    "if count==2:\n",
+    "    if (n2+1)%2==0:\n",
+    "        print('even')\n",
+    "    else:\n",
+    "        print('odd')\n",
+    "else:\n",
+    "    print('not a prime number')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "perfect number\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1=1\n",
+    "n2=int(input())\n",
+    "count=0\n",
+    "while n1<=n2:\n",
+    "    if n2%n1==0:\n",
+    "        count+=1\n",
+    "    n1+=1\n",
+    "print(count)\n",
+    "if count==2:\n",
+    "    if (n2+1)%2==0:\n",
+    "        print('even')\n",
+    "    else:\n",
+    "        print('odd')\n",
+    "elif count!=2:\n",
+    "    while n1<n2:\n",
+    "        if n2%n1==0:\n",
+    "            sum=sum+n1\n",
+    "            n1+=1\n",
+    "    if(sum==n2):\n",
+    "        print('perfect number')\n",
+    "    else:\n",
+    "        print('not a perfect number')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shah\n",
+      "shah\n",
+      "shah\n",
+      "shah\n",
+      "shah\n",
+      "shah\n",
+      "shah\n",
+      "shah\n",
+      "shah\n",
+      "shah\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "st=input()\n",
+    "if len(st)%2==0:\n",
+    "    while i<=10:\n",
+    "        print(st)\n",
+    "        i+=1\n",
+    "else:\n",
+    "    while i<=5:\n",
+    "        print(st)\n",
+    "        i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "B\n",
+      "C\n",
+      "D\n",
+      "E\n",
+      "F\n",
+      "G\n",
+      "H\n",
+      "I\n",
+      "J\n",
+      "K\n",
+      "L\n",
+      "M\n",
+      "N\n",
+      "O\n",
+      "P\n",
+      "Q\n",
+      "R\n",
+      "S\n",
+      "T\n",
+      "U\n",
+      "V\n",
+      "W\n",
+      "X\n",
+      "Y\n",
+      "Z\n"
+     ]
+    }
+   ],
+   "source": [
+    "ch1=input()\n",
+    "ch2=input()\n",
+    "i=ord(ch1)\n",
+    "n=ord(ch2)\n",
+    "while i<=n:\n",
+    "    print(chr(i))\n",
+    "    i+=1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n",
+      "e\n",
+      "f\n",
+      "g\n",
+      "h\n",
+      "i\n",
+      "j\n",
+      "k\n",
+      "l\n",
+      "m\n",
+      "n\n",
+      "o\n",
+      "p\n",
+      "q\n",
+      "r\n",
+      "s\n",
+      "t\n",
+      "u\n",
+      "v\n",
+      "w\n",
+      "x\n",
+      "y\n",
+      "z\n"
+     ]
+    }
+   ],
+   "source": [
+    "ch1=input()\n",
+    "ch2=input()\n",
+    "i=ord(ch1)\n",
+    "n=ord(ch2)\n",
+    "while i<=n:\n",
+    "    print(chr(i))\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "ch1=input()\n",
+    "ch2=input()\n",
+    "i=ord(ch1)\n",
+    "n=ord(ch2)\n",
+    "while i<=n:\n",
+    "    print(chr(i))\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E\n",
+      "F\n",
+      "G\n",
+      "H\n",
+      "I\n",
+      "J\n",
+      "K\n",
+      "L\n",
+      "M\n",
+      "N\n",
+      "O\n",
+      "P\n",
+      "Q\n",
+      "R\n",
+      "S\n",
+      "T\n",
+      "U\n"
+     ]
+    }
+   ],
+   "source": [
+    "ch1=input()\n",
+    "ch2=input()\n",
+    "i=ord(ch1)\n",
+    "n=ord(ch2)\n",
+    "while i<=n:\n",
+    "    print(chr(i))\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z\n",
+      "Y\n",
+      "X\n",
+      "W\n",
+      "V\n",
+      "U\n",
+      "T\n",
+      "S\n",
+      "R\n",
+      "Q\n",
+      "P\n",
+      "O\n",
+      "N\n",
+      "M\n",
+      "L\n",
+      "K\n",
+      "J\n",
+      "I\n",
+      "H\n",
+      "G\n",
+      "F\n",
+      "E\n",
+      "D\n",
+      "C\n",
+      "B\n",
+      "A\n"
+     ]
+    }
+   ],
+   "source": [
+    "ch1=input()\n",
+    "ch2=input()\n",
+    "i=ord(ch1)\n",
+    "n=ord(ch2)\n",
+    "while i>=n:\n",
+    "    print(chr(i))\n",
+    "    i-=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
