--- a/programs.ipynb
+++ b/programs.ipynb
@@ -1068,25 +1068,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 2, 3, 4}\n",
-      "<class 'set'>\n"
+      "{1, 2, 3, 4, '8'}\n"
      ]
     }
    ],
    "source": [
-    "c=[1,2,3,4]\n",
+    "#93\n",
+    "c={1,2,3,4}\n",
     "if type(c)==set:\n",
-    "    x=str(c)\n",
     "    n=input()\n",
-    "    x+=n\n",
-    "    print(set(x))\n",
+    "    c.add(n)\n",
+    "    print(c)\n",
     "else:\n",
     "    a=set(c)\n",
     "    print(a)\n",
