--- a/programs2.ipynb
+++ b/programs2.ipynb
@@ -576,13 +576,16 @@
     "v=4\n",
     "n=9\n",
     "if type(v) not in [int,float,complex,bool,None]:\n",
-    "    if type(v) in [str,list,dict,set]:\n",
+    "    if type(v) in [list,dict,set]:\n",
     "        if type(v)==list:\n",
     "            mid=len(v)//2\n",
     "            v[mid]=n\n",
     "            print(v)\n",
     "        elif type(v)==dict:\n",
-    "            print(v)\n",
+    "            i=1\n",
+    "            while i<=len(v):\n",
+    "                print(v[i])\n",
+    "            i+=1\n",
     "        elif type(v)==set:\n",
     "            new=list(v)\n",
     "            print(new[0])\n",
@@ -612,6 +615,24 @@
     "a=1\n",
     "b=a\n",
     "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "d={1:2,2:3}\n",
+    "print(len(d))"
    ]
   }
  ],
