--- a/programs2.ipynb
+++ b/programs2.ipynb
@@ -582,9 +582,7 @@
     "            v[mid]=n\n",
     "            print(v)\n",
     "        elif type(v)==dict:\n",
-    "            i=1\n",
-    "            while i<=len(v):\n",
-    "                print(v[i])\n",
+    "                print(v)\n",
     "            \n",
     "        elif type(v)==set:\n",
     "            new=list(v)\n",
